# algeria-cities

./: .gitignore  docker-compose.yaml  start.sh
.github/workflows/: python_lib.yml
csv/: algeria_cities.csv  algeria_cities_export.csv  algeria_postcodes.csv  algeria_postcodes_export.csv
csv/ar/: algeria_cities.csv  algeria_cities_export.csv  algeria_postcodes.csv  algeria_postcodes_export.csv
csv/ascii/: algeria_cities.csv  algeria_cities_export.csv  algeria_postcodes.csv  algeria_postcodes_export.csv
geo/: Dockerfile  README.md  requirements.txt
geo/cities/: admin.py  models.py
geo/cities/management/commands/: geolocate.py  input_poly.py  load_cities.py
geo/cities/migrations/: 0001_initial.py  0002_geolocation.py
geo/geo/: settings.py
json/: algeria_cities.json
python/: README.md  get_osm_ids.py  models.py  pyproject.toml  setup.py
python/src/algeria_cities/: helpers.py  models.py  search.py
python/tests/: test_sql_db.py
sql/: algeria_cities.sql  algeria_postcodes.sql
sql/ar/: algeria_cities.sql  algeria_postcodes.sql
sql/ascii/: algeria_cities.sql  algeria_postcodes.sql
